--- a/App/TomPIT.App.UI/App.csproj
+++ b/App/TomPIT.App.UI/App.csproj
@@ -32,7 +32,7 @@
 		<Content Include="..\..\Management\TomPIT.Management.UI\wwwroot\Assets\Styles\tompit.min.css" Link="wwwroot\Assets\Styles\tompit.min.css" />
 	</ItemGroup>
 	<ItemGroup>
-	  <EmbeddedResource Include="wwwroot/Assets/**/*.*" />
+		<EmbeddedResource Include="wwwroot/Assets/**/*.*" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="compilerconfig.json" />
@@ -44,7 +44,9 @@
 		<None Include="wwwroot\Assets\Libraries\DevExtreme\Latest\fonts\Roboto-500.woff2" />
 		<None Include="wwwroot\Assets\Libraries\DevExtreme\Latest\fonts\Roboto-700.woff2" />
 	</ItemGroup>
+
 	<ItemGroup>
+		<PackageReference Include="BuildBundlerMinifierPlus" Version="5.3.0" />
 		<PackageReference Include="lz4net" Version="1.0.15.93" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="6.0.16" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="7.0.5" />
@@ -60,7 +62,6 @@
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.5" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="7.0.5" />
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.6" />
-		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
 		<PackageReference Include="dotless.Core" Version="1.6.7" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.5" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
