--- a/Development/TomPIT.Development.UI/Development.csproj
+++ b/Development/TomPIT.Development.UI/Development.csproj
@@ -10,7 +10,7 @@
 		<AddRazorSupportForMvc>true</AddRazorSupportForMvc>
 		<AssemblyName>TomPIT.Connected.Development</AssemblyName>
 		<RootNamespace>TomPIT.Development</RootNamespace>
-<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>		
+		<CopyRefAssembliesToPublishDirectory>true</CopyRefAssembliesToPublishDirectory>
 		<AssemblyVersion>3.1.505.3</AssemblyVersion>
 		<FileVersion>3.1.505.3</FileVersion>
 		<Version>3.1.505.3</Version>
@@ -31,7 +31,7 @@
 		<Content Remove="wwwroot\Assets\Styles\development.less" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+		<PackageReference Include="BuildBundlerMinifierPlus" Version="5.3.0" />
 		<PackageReference Include="lz4net" Version="1.0.15.93" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.5" />
