--- a/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
+++ b/Reporting/TomPIT.Reporting/TomPIT.Reporting.csproj
@@ -13,6 +13,7 @@
 		<Authors>Tom PIT</Authors>
 		<Company>Tom PIT</Company>
 		<Product>Tom PIT.connected</Product>
+		<GenerateRuntimeConfigDevFile>true</GenerateRuntimeConfigDevFile>
 	</PropertyGroup>
 	<ItemGroup>
 	  <_ContentIncludedByDefault Remove="package.json" />
