--- a/Development/TomPIT.Development.UI/Development.csproj
+++ b/Development/TomPIT.Development.UI/Development.csproj
@@ -32,7 +32,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="lz4net" Version="1.0.15.93" />
-		<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />
+		<!--<PackageReference Include="BuildBundlerMinifier" Version="3.2.449" />-->
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.5" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.6.0" />
