--- a/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
+++ b/Development/TomPIT.Templates.Application.Design/TomPIT.MicroServices.Design.csproj
@@ -87,6 +87,6 @@
 	</Target>
 	<Target Name="PostBuildWin" AfterTargets="PostBuildEvent" Condition="'$(OS)' == 'Windows_NT'">
 		<Exec Command="if not exist &quot;c:/src/plugins/&quot; mkdir &quot;c:/src/plugins/&quot;" />
-		<Exec Command="copy /y &quot;$(TargetPath)&quot; &quot;/src/plugins/&quot;" />
+		<Exec Command="copy /y &quot;$(TargetPath)&quot; &quot;c:/src/plugins/&quot;" />
 	</Target>
 </Project>
