Implicit Microservice assembly references implemented

--- a/TomPIT.Connected/Properties/launchSettings.json
+++ b/TomPIT.Connected/Properties/launchSettings.json
@@ -7,6 +7,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://localhost:44003/"
+    },
+    "QualityAssurance": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "http://localhost:44004/"
     }
   }
 }
