--- a/Development/TomPIT.Development/TomPIT.Development.csproj
+++ b/Development/TomPIT.Development/TomPIT.Development.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup Label="Globals">
     <SccProjectName>SAK</SccProjectName>
     <SccProvider>SAK</SccProvider>
@@ -8,9 +8,9 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>TomPIT.Development</RootNamespace>
-    <AssemblyVersion>3.1.706.1</AssemblyVersion>
-    <FileVersion>3.1.706.1</FileVersion>
-    <Version>3.1.706.1</Version>
+    <AssemblyVersion>3.1.1019.1</AssemblyVersion>
+    <FileVersion>3.1.1019.1</FileVersion>
+    <Version>3.1.1019.1</Version>
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Tom PIT.connected</Product>
