--- a/Sys/TomPIT.Sys.SqlDeployment/TomPIT.Sys.SqlDeployment/TomPIT.Sys.SqlDeployment.csproj
+++ b/Sys/TomPIT.Sys.SqlDeployment/TomPIT.Sys.SqlDeployment/TomPIT.Sys.SqlDeployment.csproj
@@ -1,15 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyVersion>3.1.1019.1</AssemblyVersion>
+    <FileVersion>3.1.1019.1</FileVersion>
+    <Version>3.1.1019.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="microsoft.extensions.logging" Version="7.0.0" />
     <PackageReference Include="Microsoft.SqlServer.SqlManagementObjects" Version="170.18.0" />
   </ItemGroup>
-
 </Project>
