--- a/TomPIT.Proxy.Remote/TomPIT.Proxy.Remote.csproj
+++ b/TomPIT.Proxy.Remote/TomPIT.Proxy.Remote.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <AssemblyVersion>3.1.1019.1</AssemblyVersion>
+    <FileVersion>3.1.1019.1</FileVersion>
+    <Version>3.1.1019.1</Version>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Core\TomPIT.Sdk\TomPIT.Sdk.csproj" />
   </ItemGroup>
-
 </Project>
