--- a/TomPIT.Connected/TomPIT.Connected.csproj
+++ b/TomPIT.Connected/TomPIT.Connected.csproj
@@ -2,9 +2,10 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>3.1.1107.2</AssemblyVersion>
-    <FileVersion>3.1.1107.2</FileVersion>
-    <Version>3.1.1107.2</Version>
+    <AssemblyVersion>3.1.1024.1</AssemblyVersion>
+    <FileVersion>3.1.1024.1</FileVersion>
+    <Version>3.1.1024.1</Version>
+    <UserSecretsId>c813067a-68a7-478d-9a86-b7d0c008a8dc</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <Content Remove="Properties\launchSettings.json" />
