Edit references to resolve razor compilation errors

--- a/TomPIT.Connected/TomPIT.Connected.csproj
+++ b/TomPIT.Connected/TomPIT.Connected.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" Version="4.8.0" />
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="8.0.0" />
+    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App\TomPIT.App.UI\App.csproj" />
