--- a/TomPIT.Connected/TomPIT.Connected.csproj
+++ b/TomPIT.Connected/TomPIT.Connected.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>3.1.1130.1</AssemblyVersion>
-    <FileVersion>3.1.1130.1</FileVersion>
-    <Version>3.1.1130.1</Version>
+    <AssemblyVersion>3.1.1130.2</AssemblyVersion>
+    <FileVersion>3.1.1130.2</FileVersion>
+    <Version>3.1.1130.2</Version>
     <UserSecretsId>c813067a-68a7-478d-9a86-b7d0c008a8dc</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
