NORECOMPILE symbol option added

--- a/nuget.config
+++ b/nuget.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <packageRestore>
         <add key="enabled" value="True" />
@@ -7,7 +7,7 @@
     <packageSources>
         <clear />
         <add key="NuGet official package source" value="https://api.nuget.org/v3/index.json" />
-        <add key="devextreme" value="https://nuget.devexpress.com/3YZq9VqktuMtgWP4j8LVDvmSZzBMruH8Mx3WKkA9dcHO3KC1RQ/api" />
+        <add key="devextreme" value="https://nuget.devexpress.com/MyA7NLeJcQApsVpyWf3c39Tepqa9u7jHmAPt2bYdmchEAlvqfG/api" />
         <add key="SkiaDev" value="https://aka.ms/skiasharp-eap/index.json" />
     </packageSources>
     <packageSourceCredentials>
