--- a/Reporting/TomPIT.Reporting.Design/TomPIT.Reporting.Design.csproj
+++ b/Reporting/TomPIT.Reporting.Design/TomPIT.Reporting.Design.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <AssemblyVersion>3.1.1207.2</AssemblyVersion>
-    <FileVersion>3.1.1207.2</FileVersion>
-    <Version>3.1.1207.2</Version>
+    <AssemblyVersion>3.1.1208.1</AssemblyVersion>
+    <FileVersion>3.1.1208.1</FileVersion>
+    <Version>3.1.1208.1</Version>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
