--- a/.gitignore
+++ b/.gitignore
@@ -272,3 +272,4 @@ __pycache__/
 /Development/TomPIT.Development.UI/wwwroot/Assets/devscripts.min.js
 /Development/TomPIT.Development.UI/wwwroot/Assets/devstyles.min.css
 /TomPIT.Connected/sys.json
+/nuget.config
