fix: try to get IContext from Epic stack instead of creating app scope directly

--- a/.gitignore
+++ b/.gitignore
@@ -273,3 +273,4 @@ __pycache__/
 /Development/TomPIT.Development.UI/wwwroot/Assets/devstyles.min.css
 /TomPIT.Connected/sys.json
 /nuget.config
+/TomPIT.Connected/sys.json
