--- a/TomPIT.Connected/appsettings.json
+++ b/TomPIT.Connected/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "routing": {
+    "baseUrl": "http://localhost:44004"
+  },
   "endpoint": {
     "address": "127.0.0.1"
   },
@@ -9,5 +12,16 @@
       "key": "D78RF30487F4G0F8Z34F834F",
       "duration": 30
     }
+  },
+  "saas": {
+    "storage": {
+      "files": {
+        "accessToken": null,
+        "url": null
+      }
+    }
+  },
+  "sourceFiles": {
+    "folder": "c:\\sources"
   }
 }
