--- a/Development/TomPIT.Development.UI/Development.csproj
+++ b/Development/TomPIT.Development.UI/Development.csproj
@@ -6,7 +6,7 @@
     <SccLocalPath>SAK</SccLocalPath>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <AssemblyName>TomPIT.Connected.Development</AssemblyName>
     <RootNamespace>TomPIT.Development</RootNamespace>
@@ -27,7 +27,7 @@
     <None Remove="Views\Shell\**" />
   </ItemGroup>
   <ItemGroup>
-    <Content Remove="compilerconfig.json" />
+    <Content Remove="compilerconfig1.json" />
     <Content Remove="wwwroot\Assets\Styles\development.less" />
   </ItemGroup>
   <ItemGroup>
@@ -62,7 +62,7 @@
     <Folder Include="wwwroot\Assets\Fonts\OpenSans\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig1.json" />
     <None Include="wwwroot\Assets\Images\Brand\safari-pinned-tab.svg" />
     <None Include="wwwroot\Assets\Styles\development.less" />
   </ItemGroup>
