--- a/Management/TomPIT.Management.UI/Management.csproj
+++ b/Management/TomPIT.Management.UI/Management.csproj
@@ -6,7 +6,7 @@
     <SccLocalPath>SAK</SccLocalPath>
   </PropertyGroup>
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
     <RootNamespace>TomPIT.Management</RootNamespace>
     <AssemblyName>TomPIT.Connected.Management</AssemblyName>
@@ -29,10 +29,10 @@
     <None Remove="Views\Shell\**" />
   </ItemGroup>
   <ItemGroup>
-    <Content Remove="compilerconfig.json" />
+    <Content Remove="compilerconfig1.json" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig1.json" />
     <None Include="wwwroot\Assets\Styles\bootstrap\mixins\_alert.scss" />
     <None Include="wwwroot\Assets\Styles\bootstrap\mixins\_background-variant.scss" />
     <None Include="wwwroot\Assets\Styles\bootstrap\mixins\_badge.scss" />
