feat: improve build pipeline

--- a/DataProviders/TomPIT.DataProviders.Sql/TomPIT.DataProviders.Sql.csproj
+++ b/DataProviders/TomPIT.DataProviders.Sql/TomPIT.DataProviders.Sql.csproj
@@ -13,11 +13,12 @@
     <Authors>Tom PIT</Authors>
     <Company>Tom PIT</Company>
     <Product>Tom PIT.connected</Product>
+    <UserSecretsId>9eec8098-4a20-47bd-88c7-bed844a93735</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" Version="170.9.0" />
+    <PackageReference Include="Microsoft.SqlServer.Management.SqlParser" Version="172.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\TomPIT.ComponentModel\TomPIT.ComponentModel.csproj" />
